[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/inimigos/caveira_da_neve.gd" type="Script" id=1]
[ext_resource path="res://sprites/inimigos/caveira_voadora_neve/caveira_voadora_neve7.png" type="Texture" id=2]
[ext_resource path="res://sprites/inimigos/caveira_voadora_neve/caveira_voadora_neve8.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigos/caveira_voadora_neve/caveira_voadora_neve5.png" type="Texture" id=4]
[ext_resource path="res://sprites/inimigos/caveira_voadora_neve/caveira_voadora_neve2.png" type="Texture" id=5]
[ext_resource path="res://sprites/inimigos/caveira_voadora_neve/caveira_voadora_neve3.png" type="Texture" id=6]
[ext_resource path="res://sprites/inimigos/caveira_voadora_neve/caveira_voadora_neve4.png" type="Texture" id=7]
[ext_resource path="res://sprites/inimigos/caveira_voadora_neve/caveira_voadora_neve1.png" type="Texture" id=8]
[ext_resource path="res://sprites/inimigos/caveira_voadora_neve/caveira_voadora_neve6.png" type="Texture" id=9]



[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.3429, 27.3094 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.6233, 23.647 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 143.694, 83.6498 )

[sub_resource type="Animation" id=5]
length = 0.2

[node name="caveira_da_neve" type="KinematicBody2D"]
scale = Vector2( 0.6, 0.6 )
z_index = 6
collision_layer = 2
collision_mask = 73
script = ExtResource( 1 )

[node name="rotacao" type="Node2D" parent="."]

[node name="sprite" type="AnimatedSprite" parent="rotacao"]
position = Vector2( 1.7148, 0.491096 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
frame = 6
playing = true

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="caveira" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9

[node name="shape" type="CollisionShape2D" parent="caveira"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="sensor" type="Area2D" parent="."]
collision_layer = 0

[node name="shape" type="CollisionShape2D" parent="sensor"]
visible = false
position = Vector2( -0.79259, 42.2646 )
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rotation = -0.00416541
z_index = 5

[node name="anim" type="AnimationPlayer" parent="."]
anims/dano = SubResource( 5 )
[connection signal="body_entered" from="caveira" to="." method="_on_helicoptero_body_entered"]
[connection signal="body_entered" from="sensor" to="." method="_on_sensor_body_entered"]
[connection signal="body_exited" from="sensor" to="." method="_on_sensor_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
